fixed envato soft reject second time about responsive and spacing and aligment changes

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -138,6 +138,13 @@ a:focus {
   1.1.  Fonts
 
 /*----------------------------------------*/
+#gallery {
+    padding-top: 70px; 
+}
+
+#gallery .section-title {
+    margin-bottom: 45px;
+}
 
 #gallery .members .name {
     font-weight: normal;
@@ -532,13 +539,15 @@ a:focus {
 .badge_btext {
     display: block;
     font-family: 'Montserrat-Bold';
-    font-size: 40px;
+    font-size: 38px;
+    flex: 1 100%;
 }
 
 .badge_stext {
     font-family: 'Montserrat-Light';
     font-size: 24px;
-    margin-top: -10px;
+    margin-top: -8px;
+    flex: 2 100%;
 }
 
 .item_details {
@@ -621,7 +630,7 @@ a:focus {
 /*----------------------------------------*/
 
 .section {
-    padding-top: 90px;
+    padding-top: 30px;
 }
 
 .section-title {
@@ -660,7 +669,13 @@ a:focus {
   3.1.  About Us
 
 /*----------------------------------------*/
-
+.border_on {
+     height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+}
 #about_us {
     padding-top: 60px;
     min-height: 100vh;
@@ -676,8 +691,6 @@ a:focus {
 
 .about_img {
     max-width: 100%;
-    width: 581px;
-    height: 455px;
 }
 
 #about_us .row {
@@ -770,7 +783,7 @@ a:focus {
 
 #menu_items {
     height: 100%;
-    padding-bottom: 70px;
+    padding-bottom: 100px;
 }
 
 .filter_item_img {
@@ -916,9 +929,7 @@ a:focus {
 }
 
 #photo_gallery img {
-    max-width: 100%;
-    width: 300px;
-    height: 300px;
+    width: 100%;
 }
 
 #photo_gallery .block {
@@ -1302,7 +1313,9 @@ a:focus {
   4.  Pagination
 
 /*----------------------------------------*/
-
+.pagination {
+    margin-top: 50px;
+}
 .pagination>li>a,
 .pagination>li>span {
     border: none;
@@ -1419,7 +1432,7 @@ a:focus {
     position: relative;
     overflow: hidden;
     padding-top: 0;
-    margin-top: 110px;
+    margin-top: 125px;
     background-color: #990100;
 }
 
@@ -1513,7 +1526,7 @@ a:focus {
 
 #footer .footer_border {
     padding-left: 30px;
-    border-left: 1px solid #990100;
+    border-left: 1px solid #d69021;
     min-height: 150px;
     margin-bottom: 20px;
     margin-top: 20px;
@@ -1831,6 +1844,7 @@ a:focus {
     margin-left: -20px;
     width: 100px;
     height: 40px;
+    transform: translate(-50%, -50%);
     
 }
 
